# authapp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
authapp/: admin.py  exceptions.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
authapp/management/commands/: clean_inactive_users.py  start_bot.py
authapp/migrations/: 0001_initial.py
authapp/static/js/: polling.js
authapp/templates/: home.html
bot/: bot.py
